[gd_scene load_steps=7 format=3 uid="uid://bqp3ssmqavbwj"]

[ext_resource type="Texture2D" uid="uid://b0xl362tjaupi" path="res://UserInterface/WindowHeader.png" id="1_dii02"]
[ext_resource type="Script" uid="uid://b3yfu6umfwb64" path="res://UserInterface/campfire_menu.gd" id="1_ws2jc"]
[ext_resource type="Texture2D" uid="uid://wefqu5hr1r10" path="res://UserInterface/number_frame.png" id="2_o41sa"]
[ext_resource type="PackedScene" uid="uid://b64qqrdty2tul" path="res://UserInterface/level_up_choice.tscn" id="4_6uq2d"]

[sub_resource type="LabelSettings" id="LabelSettings_ws2jc"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6uq2d"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Campfire_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ws2jc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_dii02")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -11.5
offset_right = 79.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Rest at the Campfire"
label_settings = SubResource("LabelSettings_ws2jc")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="SaveButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_o41sa")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/SaveButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 18.0
offset_right = 37.0
offset_bottom = 52.0
grow_horizontal = 2
text = "Save"
label_settings = SubResource("LabelSettings_6uq2d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_o41sa")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/LevelButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 67.0
offset_bottom = 71.0
grow_horizontal = 2
text = "Level Up"
label_settings = SubResource("LabelSettings_6uq2d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RestButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_o41sa")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/RestButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 67.0
offset_bottom = 71.0
grow_horizontal = 2
text = "Rest"
label_settings = SubResource("LabelSettings_6uq2d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="InviteGuestOptions" type="MenuButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
icon = ExtResource("2_o41sa")
item_count = 3
popup/item_0/text = "Rhea"
popup/item_0/id = 0
popup/item_1/text = "Asumi"
popup/item_1/id = 1
popup/item_2/text = "Skoll"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="InviteAsumiButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_o41sa")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/InviteAsumiButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 67.0
offset_bottom = 71.0
grow_horizontal = 2
text = "Invite"
label_settings = SubResource("LabelSettings_6uq2d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InviteRheaButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_o41sa")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/InviteRheaButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 67.0
offset_bottom = 71.0
grow_horizontal = 2
text = "Invite"
label_settings = SubResource("LabelSettings_6uq2d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InviteSkollButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_o41sa")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/InviteSkollButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 67.0
offset_bottom = 71.0
grow_horizontal = 2
text = "Invite"
label_settings = SubResource("LabelSettings_6uq2d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_o41sa")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/PanelContainer/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = -56.0
offset_right = 102.0
offset_bottom = -22.0
grow_vertical = 0
text = "Exit"
label_settings = SubResource("LabelSettings_6uq2d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Level_up_choice" parent="." instance=ExtResource("4_6uq2d")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/LevelButton" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/RestButton" to="." method="_on_level_button_pressed"]
